if ! SYSTEM_SQLITE3
noinst_LIBRARIES = libsqlite3.a
libsqlite3_a_SOURCES = sqlite3.h sqlite3.c
endif

AM_CPPFLAGS = $(CVMFS_CFLAGS) -w -DSQLITE_THREADSAFE=2 -DSQLITE_ENABLE_MEMORY_MANAGEMENT -DSQLITE_ENABLE_MEMSYS5
#AM_CPPFLAGS = $(CVMFS_CFLAGS) -w -DSQLITE_THREADSAFE=1 -DSQLITE_ENABLE_MEMSYS5
AM_LDFLAGS = $(CVMFS_LIBS)
